--- a/Classes/en.lproj/Localizable.strings
+++ b/Classes/en.lproj/Localizable.strings
@@ -10,17 +10,8 @@
 "confereneceAudio" = "voice conferenece";
 "video" = "video";
 "inviteInfo" = "Invite you to a %@ call";
-"Huangup" = "Hang up";
-"Answer" = "Answer";
-"Mute" = "Mute";
-"Hands-free" = "Hands-free";
-"Camera" = "Camera";
-"SwitchCamera" = "Change camera";
-"Call in progress" = "Call in progress";
-"waitforanswer" = "Wait for the other party to answer";
-"switchvoice" = "Convert to audio";
-"waitforanswer" = "Waiting for the other party to accept the invitation";
-"receiveCallInviteprompt" = "invited you to a video call";
-"remoteUnmute" = "The other party unmuted";
-"remoteMute" = "he other party muted";
 "calling" = "Calling...";
+"AudioCall" = "Audio Call";
+"VideoCall" = "Video Call";
+"MultiAudioCall" = "Multi Audio Call";
+"MultiVideoCall" = "Multi Vidio Call";
