--- a/Classes/en.lproj/Localizable.strings
+++ b/Classes/en.lproj/Localizable.strings
@@ -15,3 +15,4 @@
 "VideoCall" = "Video Call";
 "MultiAudioCall" = "Multi Audio Call";
 "MultiVideoCall" = "Multi Vidio Call";
+"NoAnswer" = "No Answer";
