--- a/Classes/en.lproj/Localizable.strings
+++ b/Classes/en.lproj/Localizable.strings
@@ -16,3 +16,8 @@
 "MultiAudioCall" = "Multi Audio Call";
 "MultiVideoCall" = "Multi Vidio Call";
 "NoAnswer" = "No Answer";
+"StartAudioCall" = "Start a voice call";
+"StartVideoCall" = "Start a video call";
+"Redial" = "Redial";
+"Close" = "Close";
+"OngoingCall" = "Ongoing Call";
