--- a/Classes/zh-Hans.lproj/Localizable.strings
+++ b/Classes/zh-Hans.lproj/Localizable.strings
@@ -16,3 +16,8 @@
 "MultiAudioCall" = "多人语音通话";
 "MultiVideoCall" = "多人视频通话";
 "NoAnswer" = "对方未应答";
+"StartAudioCall" = "开启语音通话";
+"StartVideoCall" = "开启视频通话";
+"Redial" = "重拨";
+"Close" = "关闭";
+"OngoingCall" = "通话中";
